--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.27.5",
     "core-js": "^3.4.2",
+    "eslint": "^8.1.0",
     "gulp": "^4.0.2",
     "webpack": "^4.41.2",
     "webpack-stream": "^5.2.1"
